// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardNotice component should render a button when actions prop is provided 1`] = `
<div>
  <div
    class="components-flex components-card__footer components-card-footer card-notice css-120suhd-View-Flex-base-ItemsRow-Footer-borderRadius-borderColor-medium e19lxcc00"
    data-wp-c16t="true"
    data-wp-component="CardFooter"
  >
    <div
      class="card-notice__section"
    >
      <div
        class="card-notice__text"
      >
        Notice text
      </div>
      <div
        class="card-notice__button"
      >
        <button
          class="components-button"
          type="button"
        >
          Notice text
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardNotice component should render child 1`] = `
<div>
  <div
    class="components-flex components-card__footer components-card-footer card-notice css-120suhd-View-Flex-base-ItemsRow-Footer-borderRadius-borderColor-medium e19lxcc00"
    data-wp-c16t="true"
    data-wp-component="CardFooter"
  >
    <div
      class="card-notice__section"
    >
      <div
        class="card-notice__text"
      >
        Notice text
      </div>
      <div
        class="card-notice__button"
      />
    </div>
  </div>
</div>
`;
